--- a/translations/oe_corporate_blocks-tr.po
+++ b/translations/oe_corporate_blocks-tr.po
@@ -5,7 +5,7 @@ msgid "Contact the EU"
 msgstr "AB ile iletişime geçin"
 
 msgid "tel:0080067891011"
-msgstr "Tel: 0080067891011 "
+msgstr "tel:0080067891011"
 
 msgid "Call us 00 800 6 7 8 9 10 11"
 msgstr "Bizi arayın 00 800 6 7 8 9 10 11"
