--- a/translations/oe_corporate_blocks-ar.po
+++ b/translations/oe_corporate_blocks-ar.po
@@ -5,7 +5,7 @@ msgid "Contact the EU"
 msgstr "اتصل بالاتحاد الأوروبي"
 
 msgid "tel:0080067891011"
-msgstr "هاتف: 0080067891011"
+msgstr "tel:0080067891011"
 
 msgid "Call us 00 800 6 7 8 9 10 11"
 msgstr "اتصل بنا: 0080067891011"
