--- a/translations/oe_corporate_blocks-nb.po
+++ b/translations/oe_corporate_blocks-nb.po
@@ -5,7 +5,7 @@ msgid "Contact the EU"
 msgstr "Kontakt oss"
 
 msgid "tel:0080067891011"
-msgstr "Telefonnr.: +80067891011"
+msgstr "tel:0080067891011"
 
 msgid "Call us 00 800 6 7 8 9 10 11"
 msgstr "Ring oss på +800 6 7 8 9 10 11"
