EWPP-1854: Restore translation of 'European Union' for official langauges.

--- a/translations/oe_corporate_blocks-bg.po
+++ b/translations/oe_corporate_blocks-bg.po
@@ -235,6 +235,9 @@ msgstr "Научни изследвания и иновации"
 msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
 msgstr "https://ec.europa.eu/info/energy-climate-change-environment_bg"
 
+msgid "European Union"
+msgstr "Европейски съюз"
+
 msgid "Energy, Climate change, Environment"
 msgstr ""
 "Енергетика, изменение на климата, "
