--- a/translations/oe_corporate_blocks-lt.po
+++ b/translations/oe_corporate_blocks-lt.po
@@ -273,6 +273,9 @@ msgstr "https://ec.europa.eu/info/statistics_lt"
 msgid "Statistics"
 msgstr "Statistika"
 
+msgid "European Union"
+msgstr "Europos Sąjunga"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/lt"
 
