--- a/translations/oe_corporate_blocks-sk.po
+++ b/translations/oe_corporate_blocks-sk.po
@@ -268,6 +268,9 @@ msgstr "https://ec.europa.eu/info/statistics_sk"
 msgid "Statistics"
 msgstr "Štatistiky"
 
+msgid "European Union"
+msgstr "Európska únia"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/sk"
 
