--- a/translations/oe_corporate_blocks-et.po
+++ b/translations/oe_corporate_blocks-et.po
@@ -271,6 +271,9 @@ msgstr "https://ec.europa.eu/info/statistics_et"
 msgid "Statistics"
 msgstr "Statistika"
 
+msgid "European Union"
+msgstr "Euroopa Liit"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/et"
 
