--- a/translations/oe_corporate_blocks-it.po
+++ b/translations/oe_corporate_blocks-it.po
@@ -268,6 +268,9 @@ msgstr "https://ec.europa.eu/info/statistics_it"
 msgid "Statistics"
 msgstr "Statistiche"
 
+msgid "European Union"
+msgstr "Unione europea"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/it"
 
