--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -268,6 +268,9 @@ msgstr "https://ec.europa.eu/info/statistics_mt"
 msgid "Statistics"
 msgstr "Statistika"
 
+msgid "European Union"
+msgstr "L-Unjoni Ewropea"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/mt"
 
