--- a/translations/oe_corporate_blocks-ro.po
+++ b/translations/oe_corporate_blocks-ro.po
@@ -271,6 +271,9 @@ msgstr "https://ec.europa.eu/info/statistics_ro"
 msgid "Statistics"
 msgstr "Statistici"
 
+msgid "European Union"
+msgstr "Uniunea Europeană"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/ro"
 
