--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -268,6 +268,9 @@ msgstr "https://ec.europa.eu/info/statistics_sl"
 msgid "Statistics"
 msgstr "Statistika"
 
+msgid "European Union"
+msgstr "Evropska unija"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/sl"
 
