--- a/translations/oe_corporate_blocks-sv.po
+++ b/translations/oe_corporate_blocks-sv.po
@@ -268,6 +268,9 @@ msgstr "https://ec.europa.eu/info/statistics_sv"
 msgid "Statistics"
 msgstr "Statistik"
 
+msgid "European Union"
+msgstr "Europeiska unionen"
+
 msgid "https://ec.europa.eu/commission/presscorner/home/en"
 msgstr "https://ec.europa.eu/commission/presscorner/home/sv"
 
