EWPP-2125: Add translation for 'Accessibility' string.

--- a/translations/oe_corporate_blocks-ru.po
+++ b/translations/oe_corporate_blocks-ru.po
@@ -162,3 +162,6 @@ msgstr "Файлы cookie"
 
 msgid "Social media"
 msgstr "Социальные сети"
+
+msgid "Accessibility"
+msgstr "Специальные возможности"
