--- a/translations/oe_corporate_blocks-cs.po
+++ b/translations/oe_corporate_blocks-cs.po
@@ -175,6 +175,9 @@ msgstr "Dostupnost"
 msgid "https://european-union.europa.eu/web-accessibility-policy_en"
 msgstr "https://european-union.europa.eu/web-accessibility-policy_cs"
 
+msgid "https://commission.europa.eu/accessibility-websites-managed-european-commission_en"
+msgstr "https://commission.europa.eu/accessibility-websites-managed-european-commission_cs"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_cs"
 
