--- a/translations/oe_corporate_blocks-hr.po
+++ b/translations/oe_corporate_blocks-hr.po
@@ -181,6 +181,9 @@ msgstr "Dostupnost"
 msgid "https://european-union.europa.eu/web-accessibility-policy_en"
 msgstr "https://european-union.europa.eu/web-accessibility-policy_hr"
 
+msgid "https://commission.europa.eu/accessibility-websites-managed-european-commission_en"
+msgstr "https://commission.europa.eu/accessibility-websites-managed-european-commission_hr"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_hr"
 
