--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -175,6 +175,9 @@ msgstr "Acessibilidade"
 msgid "https://european-union.europa.eu/web-accessibility-policy_en"
 msgstr "https://european-union.europa.eu/web-accessibility-policy_pt"
 
+msgid "https://commission.europa.eu/accessibility-websites-managed-european-commission_en"
+msgstr "https://commission.europa.eu/accessibility-websites-managed-european-commission_pt"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_pt"
 
