--- a/translations/oe_corporate_blocks-ro.po
+++ b/translations/oe_corporate_blocks-ro.po
@@ -181,6 +181,9 @@ msgstr "Accesibilitate"
 msgid "https://european-union.europa.eu/web-accessibility-policy_en"
 msgstr "https://european-union.europa.eu/web-accessibility-policy_ro"
 
+msgid "https://commission.europa.eu/accessibility-websites-managed-european-commission_en"
+msgstr "https://commission.europa.eu/accessibility-websites-managed-european-commission_ro"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_ro"
 
